--- a/GitHub_1/webprofil.css
+++ b/GitHub_1/webprofil.css
@@ -1,3 +1,8 @@
+body {
+    /* display: flex; */
+    width: 99vw;
+    margin: 0;
+}
 header{
     background-color: rgb(0, 195, 255);
     text-align: center;
@@ -13,6 +18,11 @@ nav{
     background-color: darkorange;
     font-family: Arial, Helvetica, sans-serif;
     color: aliceblue;
+}
+.row{
+    display: flex; 
+    justify-content: space-between;
+    margin: 20px;
 }
     nav ul {
         white-space: nowrap;
